openapi: define a Device structure
